[gd_scene load_steps=9 format=3 uid="uid://b532tqkq87p26"]

[ext_resource type="PackedScene" uid="uid://cyfml6jsu4fn8" path="res://Battle/UI/battle_ui.tscn" id="1_3sce7"]
[ext_resource type="Script" path="res://Battle/battle.gd" id="1_qlwco"]
[ext_resource type="PackedScene" uid="uid://b4vk7tm5thel5" path="res://Battle/UI/battle_potential_rewards.tscn" id="3_hj1dv"]
[ext_resource type="PackedScene" uid="uid://ft0wxa2yswmp" path="res://Battle/Field/Friendlies.tscn" id="5_4t2pk"]
[ext_resource type="PackedScene" uid="uid://cg00ytymshy12" path="res://Battle/Field/Enemies.tscn" id="6_6sqgt"]
[ext_resource type="PackedScene" uid="uid://c6vrwun6gri4j" path="res://Battle/UI/Transitions/transition.tscn" id="7_dgs5e"]
[ext_resource type="Script" path="res://Battle/stats_checking.gd" id="8_madbr"]
[ext_resource type="Script" path="res://Battle/battle_util.gd" id="8_sl511"]

[node name="Battle" type="Node2D"]
script = ExtResource("1_qlwco")

[node name="BattleUI" parent="." instance=ExtResource("1_3sce7")]
z_index = 2
offset_top = 453.0
offset_bottom = 453.0

[node name="BattlePotentialRewards" parent="." instance=ExtResource("3_hj1dv")]
offset_right = 642.0
offset_bottom = 95.0

[node name="Friendlies" parent="." instance=ExtResource("5_4t2pk")]

[node name="Enemies" parent="." instance=ExtResource("6_6sqgt")]

[node name="BG" type="TextureRect" parent="."]
z_index = -4
offset_top = 89.0
offset_right = 643.0
offset_bottom = 543.0

[node name="Transition" parent="." instance=ExtResource("7_dgs5e")]
z_index = 3

[node name="stats_checking" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("8_madbr")

[node name="util" type="Node" parent="."]
script = ExtResource("8_sl511")

[connection signal="TransitionHide" from="Transition" to="." method="_on_transition_hide"]
[connection signal="TransitionShow" from="Transition" to="." method="_on_transition_show"]
